[package]
authors = ["Jeff Muizelaar <jmuizelaar@mozilla.com>"]
description = "A library to extract content from pdfs"
documentation = "https://docs.rs/crate/pdf-extract/"
edition = "2024"
keywords = ["pdf2text", "text", "pdf", "pdf2txt"]
license = "MIT"
name = "pdf-extract"
repository = "https://github.com/jrmuizel/pdf-extract"
version = "0.9.0"
include = ["src/**/*", "README.md"]

[profile.release]
debug = true

[dependencies]
adobe-cmap-parser = "0.4.1"
encoding_rs = "0.8.34"
euclid = "0.22.11"
lopdf = {version = "0.36", default-features = false}
postscript = "0.19.0"
type1-encoding-parser = "0.1.0"
unicode-normalization = "0.1.19"
cff-parser = "0.1.0"
log = "0.4.22"
thiserror = "2.0.12"

[dev-dependencies]
ureq = "3.0.11"
test-log = "0.2.17"

[dev-dependencies.simple_logger]
version = "5"
default-features = false
features = ["colors"]
